Add getEmailList endpoint
Update open api specification to support new email attribute "status", add api endpoint, add service and repo methods, add integration tests and unit tests
